--- a/Triggerless.Services.Server/app.config
+++ b/Triggerless.Services.Server/app.config
@@ -8,6 +8,7 @@
     <applicationSettings>
         <Triggerless.Services.Server.Settings1>
             <setting name="osCsid" serializeAs="String">
+              <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
               <value>ABCDEFGHIJKLMNOPQRSTUVWX</value>
             </setting>
         </Triggerless.Services.Server.Settings1>
