--- a/Triggerless.Tests/app.config
+++ b/Triggerless.Tests/app.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
+    <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
     <add key="osCsid" value="ABCDEFGHIJKLMNOPQRSTUVWX" />
   </appSettings>
   <connectionStrings>
