--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -5,6 +5,7 @@
   -->
 <configuration>
     <appSettings>
+        <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
         <add key="osCsid" value="ABCDEFGHIJKLMNOPQRSTUVWX" />
         <add key="Room.UserAgent" value="Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:84.0) Gecko/20100101 Firefox/84.0"/>
         <add key="webpages:Version" value="3.0.0.0" />
