--- a/Triggerless.Tests/Triggerless.Tests.csproj
+++ b/Triggerless.Tests/Triggerless.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ProductTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AvatarCardTests.cs" />
+    <Compile Include="RadioTests.cs" />
     <Compile Include="StoreTests.cs" />
     <Compile Include="TriggerlessApiClientTests.cs" />
     <Compile Include="UserControllerTests.cs" />
