--- a/Triggerless.API/packages.config
+++ b/Triggerless.API/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Dapper" version="2.0.78" targetFramework="net461" />
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="SharpZipLib" version="1.3.1" targetFramework="net461" />
