--- a/XAFLib/Triggerless.XAFLib.csproj
+++ b/XAFLib/Triggerless.XAFLib.csproj
@@ -34,6 +34,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=1.3.1.9, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.1.3.1\lib\net45\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,7 @@
     <Compile Include="Animation.cs" />
     <Compile Include="Bone.cs" />
     <Compile Include="BoneTags.cs" />
+    <Compile Include="ChknFile.cs" />
     <Compile Include="IAFFile.cs" />
     <Compile Include="IAFXML.cs" />
     <Compile Include="Matrix3D.cs" />
@@ -80,7 +84,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Skeleton.xsf" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
