--- a/Triggerless.API/Triggerless.API.csproj
+++ b/Triggerless.API/Triggerless.API.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\RadioController.cs" />
     <Compile Include="Controllers\RipController.cs" />
+    <Compile Include="Controllers\RipLogController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
@@ -120,8 +121,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Services\DBSvc.cs" />
-    <Compile Include="Services\RipService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Triggerless.ImvuClient\Triggerless.Services.Common.csproj">
