Started Notifier project, changed up osCsid

--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -11,6 +11,7 @@
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
       <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
+      <add key="osCsid" value="abcdefghijklmnopqrstuvwxya123456"/> <!-- this overrides the default -->
     </appSettings>
     <connectionStrings>
         <add name="bootsters_db" connectionString="Data Source=yew.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=bootsters;Password=$bootsters$" />
@@ -31,6 +32,13 @@
             <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
         </handlers>
     </system.webServer>
+  <location path="newimg.aspx">
+    <system.web>
+      <authorization>
+        <deny users="*"/>
+      </authorization>
+    </system.web>
+  </location>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
