--- a/Triggerless.Services.Server/app.config
+++ b/Triggerless.Services.Server/app.config
@@ -2,14 +2,20 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Triggerless.Services.Server.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
             <section name="Triggerless.Services.Server.Settings1" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
+        <Triggerless.Services.Server.Settings>
+            <setting name="osCsid" serializeAs="String">
+                <value>abcdefghijklmnopqrstuvwxya123456</value>
+            </setting>
+        </Triggerless.Services.Server.Settings>
         <Triggerless.Services.Server.Settings1>
             <setting name="osCsid" serializeAs="String">
               <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
-              <value>ABCDEFGHIJKLMNOPQRTSTUVWX</value>
+              <value>abcdefghijklmnopqrstuvwxya123456</value>
             </setting>
         </Triggerless.Services.Server.Settings1>
     </applicationSettings>
