--- a/Triggerless.Models/Triggerless.Models.csproj
+++ b/Triggerless.Models/Triggerless.Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ImvuProduct.cs" />
     <Compile Include="ImvuUser.cs" />
     <Compile Include="LogConversation.cs" />
+    <Compile Include="PrivateMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RipCountEntry.cs" />
     <Compile Include="TriggerlessRadio.cs" />
