--- a/Triggerless.Services.Server/Settings.settings
+++ b/Triggerless.Services.Server/Settings.settings
@@ -1,10 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Triggerless.Services.Server" GeneratedClassName="Settings1">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Triggerless.Services.Server" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="osCsid" Type="System.String" Scope="Application">
-      <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
-      <Value Profile="(Default)">ABCDEFGHIJKLMNOPQRTSTUVWX</Value>
+      <Value Profile="(Default)">abcdefghijklmnopqrstuvwxya123456</Value>
     </Setting>
   </Settings>
 </SettingsFile>
