--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -12,6 +12,7 @@
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
       <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
       <add key="osCsid" value="abcdefghijklmnopqrstuvwxya123456"/> <!-- this overrides the default -->
+      <add key="homeIP" value="98.201.77.24"/>
     </appSettings>
     <connectionStrings>
         <add name="bootsters_db" connectionString="Data Source=yew.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=bootsters;Password=$bootsters$" />
