System.Memory, NVorbis removed due to version conflict.

--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -16,7 +16,7 @@
       <add key="ClientValidationEnabled" value="true" />
       <add key="UnobtrusiveJavaScriptEnabled" value="true" />
       <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
-      <add key="osCsid" value="0123456789abcdef0123456789abcdef" /> <!-- Not my real osCsid -->
+      <add key="osCsid" value="0123456789abcdef0123456789abcdef" /> <!-- my real osCsid -->
       <add key="allowedIPs" value="" />
       <add key="restrictIPs" value="true" />
     </appSettings>
@@ -80,10 +80,6 @@
             <dependentAssembly>
                 <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
-            </dependentAssembly>
-            <dependentAssembly>
-                <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-                <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
