--- a/Triggerless.Services.Server/Triggerless.Services.Server.csproj
+++ b/Triggerless.Services.Server/Triggerless.Services.Server.csproj
@@ -64,9 +64,6 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
-    </Reference>
     <Reference Include="System.Numerics" />
     <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
@@ -98,7 +95,6 @@
     <Compile Include="ImvuApiService.cs" />
     <Compile Include="ImvuPageClient.cs" />
     <Compile Include="ImvuPageService.cs" />
-    <Compile Include="NVorbisService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RipService.cs" />
     <Compile Include="Settings.Designer.cs">
@@ -109,17 +105,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NVorbis\NVorbis.csproj">
-      <Project>{0beb1d6d-c0f5-48e0-a006-2ee25b6aea62}</Project>
-      <Name>NVorbis</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Triggerless.ImvuClient\Triggerless.Services.Common.csproj">
-      <Project>{288498d2-5c6c-474c-a58d-531b63e77e13}</Project>
-      <Name>Triggerless.Services.Common</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Triggerless.Models\Triggerless.Models.csproj">
       <Project>{c5d16c73-636f-41cc-ad81-5ed0af0d54e4}</Project>
       <Name>Triggerless.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Triggerless.Services.Common\Triggerless.Services.Common.csproj">
+      <Project>{288498d2-5c6c-474c-a58d-531b63e77e13}</Project>
+      <Name>Triggerless.Services.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\XAFLib\Triggerless.XAFLib.csproj">
       <Project>{a1312551-9229-4c9c-b2eb-5b5bf4d5adae}</Project>
