--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,6 @@ healthchecksdb
 /WebAgent.Tests
 /Repo
 /expose-outfits-reactjs/expose-outfits-2021-02-09.zip
+/NVorbisDecoder
+/System.Memory
+/expose-outfits-reactjs-b4
