--- a/Triggerless.Services.Server/app.config
+++ b/Triggerless.Services.Server/app.config
@@ -9,13 +9,13 @@
     <applicationSettings>
         <Triggerless.Services.Server.Settings>
             <setting name="osCsid" serializeAs="String">
-                <value>0123456789abcdef0123456789abcdef</value>
+                <value>11111111111111111111111111111111</value>
             </setting>
         </Triggerless.Services.Server.Settings>
         <Triggerless.Services.Server.Settings1>
             <setting name="osCsid" serializeAs="String">
               <!-- IMPORTANT NOTE - FOR THIS TO WORK YOU NEED YOUR OWN osCsid BROWSER COOKIE, I'm not sharing mine with you, sorry -->
-              <value>0123456789abcdef0123456789abcdef</value>
+              <value>91d524952a43de45ff6e19eae1bb5295</value>
             </setting>
         </Triggerless.Services.Server.Settings1>
     </applicationSettings>
@@ -25,6 +25,18 @@
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" /></startup></configuration>
