--- a/Triggerless.Services.Server/packages.config
+++ b/Triggerless.Services.Server/packages.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EPPlus" version="6.0.7" targetFramework="net461" />
+  <package id="EPPlus" version="6.0.7" targetFramework="net461" requireReinstallation="true" />
   <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net461" />
   <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net461" />
+  <package id="LiteDB" version="5.0.15" targetFramework="net472" />
   <package id="log4net" version="2.0.15" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="NVorbis" version="0.10.4" targetFramework="net461" />
-  <package id="Polly" version="7.2.3" targetFramework="net461" />
+  <package id="Polly" version="7.2.3" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
