--- a/Triggerless.Tests/packages.config
+++ b/Triggerless.Tests/packages.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="LiteDB" version="5.0.12" targetFramework="net461" />
+  <package id="LiteDB" version="5.0.15" targetFramework="net472" />
   <package id="log4net" version="2.0.15" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
   <package id="NUnit" version="3.13.3" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="4.2.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="4.3.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
 </packages>
