--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -39,7 +39,7 @@
   </log4net>
   <!-- Connection Strings -->
   <connectionStrings>
-    <add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=$Chr1sV3l$" />
+    <add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=(redacted)" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
