Fixed zero length trigger bug that keeps popping up.

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,7 @@ healthchecksdb
 /NVorbisDecoder
 /System.Memory
 /expose-outfits-reactjs-b4
+/GetImvuCookie/GetImvuCookie.txt
+/IMVU-API/user-user-xxx.response
+/entries.cs
+/long-url.txt
