--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -15,9 +15,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
-    <add key="osCsid" value="4cfedf4682bdd8bbc951f6f5a92daab0" />
+    <add key="osCsid" value="ae3703227ba91bae81e6565099b66b82" />
     <!-- my real osCsid -->
-    <add key="allowedIPs" value="" />
+		<!-- 4cfedf4682bdd8bbc951f6f5a92daab0 -->
+		<add key="allowedIPs" value="" />
     <add key="restrictIPs" value="true" />
   </appSettings>
   <log4net>
@@ -39,7 +40,7 @@
   </log4net>
   <!-- Connection Strings -->
   <connectionStrings>
-    <add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=(redacted)" />
+    <add name="bootsters_db" connectionString="Data Source=ws265.win.arvixe.com;Initial Catalog=bootsters_db;Persist Security Info=True;User ID=chrisvel_web;Password=$Chr1sV3l$" />
   </connectionStrings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -52,7 +53,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.7.2" maxUrlLength="2000" maxQueryStringLength="200000" />
   </system.web>
   <system.webServer>
     <modules>
@@ -64,6 +65,11 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+		<security>
+			<requestFiltering>
+				<requestLimits maxUrl="2000" maxQueryString="200000" />
+			</requestFiltering>
+		</security>
   </system.webServer>
   <location path="newimg.aspx">
     <system.web>
