Added GetProductSounds to ProductController

--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,7 @@ healthchecksdb
 /entries.cs
 /long-url.txt
 /radio-triggerless-com
+/CardsApp
+/expose-outfit-samples
+/Triggerless.Tool
+/TriggerTool
