--- a/Triggerless.API/packages.config
+++ b/Triggerless.API/packages.config
@@ -1,25 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapper" version="2.0.123" targetFramework="net461" />
+  <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
-  <package id="log4net" version="2.0.15" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.9" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net461" />
+  <package id="log4net" version="3.0.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
   <package id="NVorbis" version="0.10.5" targetFramework="net472" />
   <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
-  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
