--- a/Triggerless.API/packages.config
+++ b/Triggerless.API/packages.config
@@ -1,15 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConcurrentHashSet" version="1.3.0" targetFramework="net472" />
   <package id="Dapper" version="2.1.66" targetFramework="net472" />
   <package id="Dapper.Contrib" version="2.0.78" targetFramework="net461" />
-  <package id="log4net" version="3.0.3" targetFramework="net472" />
+  <package id="DSharpPlus" version="4.5.1" targetFramework="net472" />
+  <package id="DSharpPlus.CommandsNext" version="4.5.1" targetFramework="net472" />
+  <package id="DSharpPlus.Interactivity" version="4.5.1" targetFramework="net472" />
+  <package id="log4net" version="3.1.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.3.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.6" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
@@ -17,11 +24,24 @@
   <package id="SharpZipLib" version="1.4.2" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
-  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="9.0.6" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.6" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="9.0.6" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
