--- a/Triggerless.Models/packages.config
+++ b/Triggerless.Models/packages.config
@@ -1,5 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConcurrentHashSet" version="1.3.0" targetFramework="net472" />
+  <package id="DSharpPlus" version="4.5.1" targetFramework="net472" />
+  <package id="DSharpPlus.CommandsNext" version="4.5.1" targetFramework="net472" />
+  <package id="DSharpPlus.Interactivity" version="4.5.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.6" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="9.0.6" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.6" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="9.0.6" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
