--- a/Triggerless.Tests/packages.config
+++ b/Triggerless.Tests/packages.config
@@ -1,27 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DSharpPlus" version="4.5.1" targetFramework="net472" />
   <package id="LiteDB" version="5.0.21" targetFramework="net472" />
-  <package id="log4net" version="3.0.3" targetFramework="net472" />
-  <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net472" />
+  <package id="log4net" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.ApplicationInsights" version="2.23.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.5.3" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.5.3" targetFramework="net472" />
-  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.5.3" targetFramework="net472" />
-  <package id="Microsoft.Testing.Platform" version="1.5.3" targetFramework="net472" />
-  <package id="Microsoft.Testing.Platform.MSBuild" version="1.5.3" targetFramework="net472" />
-  <package id="Microsoft.TestPlatform.ObjectModel" version="17.12.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.6" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform.MSBuild" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.AdapterUtilities" version="17.14.1" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="17.14.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
   <package id="NUnit" version="4.3.2" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="5.0.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="9.0.1" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="9.0.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
-  <package id="System.Reflection.Metadata" version="9.0.1" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="9.0.6" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.6" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.WebSockets" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.WebSockets.Client" version="4.3.2" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="9.0.6" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="9.0.6" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.6.3" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.6.1" targetFramework="net472" />
 </packages>
