--- a/Triggerless.API/Web.config
+++ b/Triggerless.API/Web.config
@@ -19,7 +19,8 @@
 		<add key="DiscordBotToken" value="xxxxxxxxxxxxxxxxxxxxxxxxxx.xxxxxx.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
     <!-- my real osCsid -->
 		<add key="allowedIPs" value="" />
-    <add key="restrictIPs" value="true" />
+		<add key="deniedIPs" value=""/>
+    <add key="restrictIPs" value="false" />
   </appSettings>
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -53,7 +54,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" maxUrlLength="2000" maxQueryStringLength="200000" />
+    <httpRuntime targetFramework="4.7.2" maxUrlLength="2000" maxQueryStringLength="209715200" />
   </system.web>
   <system.webServer>
     <modules>
