--- a/Triggerless.Models/Triggerless.Models.csproj
+++ b/Triggerless.Models/Triggerless.Models.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RipCountEntry.cs" />
     <Compile Include="SongInfo.cs" />
+    <Compile Include="TriggerbotLyricsEntry.cs" />
     <Compile Include="TriggerlessRadio.cs" />
   </ItemGroup>
   <ItemGroup>
